--- a/domonique.css
+++ b/domonique.css
@@ -10,3 +10,13 @@
 .green {
   background-color: #16A950;
 }
+.yellow {
+  background-color: #FEEB0B;
+}
+body
+
+background-color:#666666;
+
+	.dark_green {
+	background-color:#02A345
+}
