--- a/domonique.css
+++ b/domonique.css
@@ -4,7 +4,7 @@
   width: 50%;
   margin:0 auto;
 }
-.light_green {
+.orange {
 	  background-color: #96D13B;
 }
 .green {
@@ -17,6 +17,6 @@ body
 
 background-color:#666666;
 
-	.dark_green {
+	.blue {
 	background-color:#02A345
 }
