--- a/domonique.css
+++ b/domonique.css
@@ -20,3 +20,33 @@
 .green {
   background-color: #0c8542;
 }
+.box {
+  min-height: 100px;
+  width: 50%;
+  margin:0 auto;
+}
+
+.light_green {
+	  background-color: #96D13B;
+}
+
+.green {
+  background-color: #16A950;
+}
+
+.yellow {
+  background-color: #FEEB0B;
+  
+}
+body
+{
+	background-color:#666666;
+}
+	
+	
+.dark_green {
+	background-color:#02A345
+	
+.blue {
+	background-color:
+	
