--- a/domonique.css
+++ b/domonique.css
@@ -1,52 +1,64 @@
 
-.box {
-  min-height: 100px;
-  width: 100%;
+.box1 {
+  min-height: 40vh;
+  width: 28%;
+  margin: auto;
+  display: inline-table;
+}
+
+.box2 {
+  min-height: 40vh;
+  width: 53%;
+  margin: auto;
+  display: inline-table;
+}
+
+.box3 {
+  min-height: 40vh;
+  width: 18%;
+  margin: auto;
+  display: inline-table;
+}
+
+.box4 {
+  min-height: 52vh;
+  width: 46%;
+  margin: auto;
+  display: inline-table;
+}
+
+.box5 {
+  min-height: 52vh;
+  width: 53%;
+  margin: auto;
+  display: inline-table;
 }
 
 .white {
 	  background-color: #fff;
-	  min-height:25px;
+	  min-height:150px;
 }
 
-.dark_blue {
-  background-color: #1a237e;
+h2 {
+	margin-top:120px;
+}
+
+.dark_green {
+  background-color: #015C00;
 }
 
 .light_blue {
-  background-color: #099dd9;
+  background-color: #BBE7FF;
 }
 
 .green {
-  background-color: #0c8542;
-}
-.box {
-  min-height: 100px;
-  width: 50%;
-  margin:0 auto;
+  background-color: #02910D;
 }
 
-.light_green {
-	  background-color: #96D13B;
+.baby_blue {
+  background-color: #DBE7FF;
 }
 
-.green {
-  background-color: #16A950;
+.grey_blue {
+  background-color: #D1E8D3;
 }
-
-.yellow {
-  background-color: #FEEB0B;
-  
-}
-body
-{
-	background-color:#666666;
-}
-	
-	
-.dark_green {
-	background-color:#02A345
-	
-.blue {
-	background-color:
-	
