--- a/domonique.css
+++ b/domonique.css
@@ -43,22 +43,15 @@ h2 {
 	margin-top:120px;
 }
 
-.dark_green {
-  background-color: #015C00;
+.dark_purple {
+  background-color: #8000ff;
 }
 
-.light_blue {
-  background-color: #BBE7FF;
+.light_pink {
+  background-color: #ff9ecd;
 }
 
-.green {
-  background-color: #02910D;
-}
+.blue{
+	background-color:##0000ff:
 
-.baby_blue {
-  background-color: #DBE7FF;
-}
 
-.grey_blue {
-  background-color: #D1E8D3;
-}
