--- a/domonique.css
+++ b/domonique.css
@@ -23,23 +23,24 @@
 
 
 .white {
-	  background-color: #fff;
-	  min-height:150px;
+ background-color: #fff;
+ min-height:150px;
 }
 
 h2 {
-	margin-top:120px;
+ margin-top:120px;
 }
 
 .dark_purple {
-  background-color: #8000ff;
+ background-color: #8000ff;
 }
 
 .light_pink {
-  background-color: #ff9ecd;
+ background-color: #ff9ecd;
 }
 
 .blue{
-	background-color:##0000ff:
+ background-color:##0000ff:
+}
 
 
