--- a/domonique.css
+++ b/domonique.css
@@ -2,39 +2,30 @@
 .box1 {
   min-height: 40vh;
   width: 28%;
-  margin: auto;
-  display: inline-table;
+  
+ 
 }
 
 .box2 {
   min-height: 40vh;
   width: 53%;
-  margin: auto;
-  display: inline-table;
+ 
 }
 
 .box3 {
   min-height: 40vh;
   width: 19%;
-  margin: auto;
-  display: inline-table;
+ 
 }
 
-.white {
- background-color: #fff;
- min-height:150px;
+.dark_green {
+ background-color:#42ad1e;
 }
 
-.dark_purple {
-  background-color: #8000ff;
+.light_blue {
+  background-color:#78e4ff;
 }
 
-.light_pink {
-  background-color: #ff9ecd;
+.light_green {
+  background_color:#4fcc2d;
 }
-
-.blue{
-  background-color: #4286f4:
-}
-
-
