--- a/domonique.css
+++ b/domonique.css
@@ -2,7 +2,7 @@
 .box1 {
   min-height: 40vh;
   width: 20%;
-  clear:left;
+  float:left;
   
 }
 
@@ -13,7 +13,7 @@
 
 .box3 {
   min-height: 40vh;
-  width: 19%;
+  width: 20%;
  
 }
 
