--- a/domonique.css
+++ b/domonique.css
@@ -2,13 +2,14 @@
 .box1 {
   min-height: 40vh;
   width: 20%;
-  float:left;
+  
   
 }
 
 .box2 {
   min-height: 50vh;
   width: 20%; 
+  float:left
 }
 
 .box3 {
