--- a/domonique.css
+++ b/domonique.css
@@ -33,8 +33,7 @@
 .box4 {
   min-height: 40vh;
   width: 20%;
-   display: inline-table;
   
   .blue {
-    background-color:#1D92E5;
+    background-color:#5CAAE2;
   }
