--- a/domonique.css
+++ b/domonique.css
@@ -37,3 +37,12 @@
   .blue {
     background-color:#5CAAE2;
   }
+
+.box5 {
+  min-height: 40vh;
+  width: 20%;
+}
+
+.brown {
+  background-color:#B25018;
+}
