--- a/domonique.css
+++ b/domonique.css
@@ -33,14 +33,15 @@
 .box4 {
   min-height: 40vh;
   width: 20%;
+  float:left;
 }
   .blue {
     background-color:#5CAAE2;
   }
 
 .box5 {
-  min-height: 40vh;
-  width: 20%;
+  min-height: 30vh;
+  width: 40%;
   float:right;
   display:inline-block;
 }
