--- a/domonique.css
+++ b/domonique.css
@@ -15,7 +15,7 @@
 .box3 {
   min-height: 40vh;
   width: 19%;
- display: inline-table;
+ display: flex;
 }
 
 .dark_green {
@@ -32,7 +32,7 @@
 
 .box4 {
   min-height: 40vh;
-  width: 20%;
+  width: 40%;
   float:left;
 }
   .blue {
@@ -43,7 +43,7 @@
   min-height: 30vh;
   width: 40%;
   float:right;
-  display:inline-block;
+  display:flex;
 }
 
 .brown {
