--- a/domonique.css
+++ b/domonique.css
@@ -7,7 +7,7 @@
 }
 
 .box2 {
-  min-height: 50vh;
+  min-height: 40vh;
   width: 20%; 
    display: inline-table;
 }
@@ -43,7 +43,7 @@
   min-height: 40vh;
   width: 40%;
   float:right;
-  display:flex;
+  display:inline-block;
 }
 
 .brown {
