--- a/domonique.css
+++ b/domonique.css
@@ -1,9 +1,9 @@
 
 .box1 {
-  min-height: 40vh;
-  width: 20%;
-   display: inline-table;
-  
+ min-height: 30vh;
+		width: 98%;
+		margin: auto;
+		display: inline-table;
 }
 
 .box2 {
