--- a/domonique.css
+++ b/domonique.css
@@ -4,7 +4,7 @@
 width: 50%;
 margin: auto;
 display: inline-table;
- @media screen and (max-width:289px) {
+ @media screen and (max-width:289px); {
   .flex-container {
    display:block;
 }
