--- a/domonique.css
+++ b/domonique.css
@@ -1,12 +1,23 @@
+body {
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+}
+
+.flex-container {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	height: inherit;
+}
 
 .box1 {
  min-height: 30vh;
 width: 50%;
 margin: auto;
 display: inline-table;
- @media screen and (max-width:289px); {
 
-}
  }
 .box2 {
   min-height: 30vh;
