--- a/domonique.css
+++ b/domonique.css
@@ -12,6 +12,9 @@ body {
 	height: inherit;
 }
 
+@media only screen and (max-width:289px); {
+}
+
 .box1 {
  min-height: 30vh;
 width: 50%;
@@ -66,4 +69,8 @@ float: right;
 
 .brown {
   background-color:#B25018;
+}
+
+.opaque {
+	opacity: 0.5;
 }
