--- a/domonique.css
+++ b/domonique.css
@@ -1,4 +1,6 @@
-
+body {
+@media only screen and (min-width:680px);
+}
 
 .box1 {
  min-height: 30vh;
@@ -54,8 +56,4 @@ float: right;
 
 .brown {
   background-color:#B25018;
-}
-
-.opaque {
-	opacity: 0.5;
 }
