--- a/domonique.css
+++ b/domonique.css
@@ -9,7 +9,7 @@ display: inline-table;
 
  }
 .box2 {
- @media only screen and (min-width:680px)
+ flex-wrap:flex;
   min-height: 30vh;
 width: 50%;
 margin: auto;
@@ -17,7 +17,7 @@ float: right;
  
  }
 .box3 {
- @media only screen and (min-width:680px)
+ flex-wrap:flex;
   min-height: 30vh;
 width: 50%;
 margin: auto;
@@ -37,7 +37,7 @@ display: inline-table;
 }
 
 .box4 {
- @media only screen and (min-width:680px)
+flex-wrap:flex;
  min-height: 30vh;
 width: 50%;
 margin: auto;
@@ -49,7 +49,7 @@ float: right;
   }
 
 .box5 {
- @media only screen and (min-width:680px)
+ flex-wrap:flex;
  min-height: 30vh;
 width: 100%;
 margin: auto;
