--- a/domonique.css
+++ b/domonique.css
@@ -1,7 +1,7 @@
 
 
 .box1 {
-flex-wrap:flex;
+ @media screen and (min-width:1500px) {
  min-height: 30vh;
 width: 50%;
 margin: auto;
@@ -9,7 +9,7 @@ display: inline-table;
 
  }
 .box2 {
- flex-wrap:flex;
+  @media screen and (min-width:500px) {
   min-height: 30vh;
 width: 50%;
 margin: auto;
@@ -17,7 +17,7 @@ float: right;
  
  }
 .box3 {
- flex-wrap:flex;
+  @media screen and (min-width:500px){
   min-height: 30vh;
 width: 50%;
 margin: auto;
@@ -37,7 +37,7 @@ display: inline-table;
 }
 
 .box4 {
-flex-wrap:flex;
+  @media screen and (min-width:400px) {
  min-height: 30vh;
 width: 50%;
 margin: auto;
@@ -49,7 +49,7 @@ float: right;
   }
 
 .box5 {
- flex-wrap:flex;
+  @media screen and (min-width:300px) {
  min-height: 30vh;
 width: 100%;
 margin: auto;
