--- a/domonique.css
+++ b/domonique.css
@@ -3,7 +3,7 @@ body {
 
 .box1 {
  img {
-	content:url(
+	content:url(https://user-images.githubusercontent.com/28358543/31746084-823cd6da-b41a-11e7-8053-c7171a67ab55.jpg);
 	}
  min-height: 30vh;
 width: 50%;
