--- a/domonique.css
+++ b/domonique.css
@@ -1,4 +1,4 @@
-
+@media screen and {max-width:600px}
 .box1 {
  img {
 content:url(https://user-images.githubusercontent.com/28358543/31746084-823cd6da-b41a-11e7-8053-c7171a67ab55.jpg);
